syntax = "proto3";

import "cargo.proto";
option go_package = "/api";
package api;

message SparePart {
  uint64 id = 1;
  string title = 2;
  string description = 3;
  repeated uint64 categories = 4;
  repeated uint64 transportTypes = 5;
  Geo location = 6;
  string address = 7;
  repeated string images = 8;
  repeated string phone = 9;
  repeated string email = 10;
  double lat = 11;
  double lon = 12;
  uint32 cost = 13;
  string currency = 14;
}


message SparePartRequest {
  uint64 id = 1;
}

message SparePartResponse {
  uint64 id = 1;
  bool success = 2;
}

message FindSparePartRequest {
  repeated Geo location = 1;
  repeated string categories = 2;
  repeated string transportTypes = 3;
  uint32 limit = 4;
  uint32 offset = 5;
}

message FindSparePartResult {
  uint64 id = 1;
  string created_at = 2;
  string updated_at = 3;
  message ShortGeo {
    uint64 id = 1;
    string name = 2;
    uint32 type = 3;
    string address = 4;
    double lat = 5;
    double lon = 6;
  }
  ShortGeo location = 4;
  string title = 6;
  string description = 7;
  repeated string categories = 11;
  repeated string images = 12;
  repeated string phone = 13;
  repeated string email = 14;
  message Owner {
    uint64 id = 1;
    string name = 2;
  }
  Owner owner = 17;
  int32 likes = 18;
  int32 dislikes = 19;
  repeated string transportTypes = 20;
  uint32 cost = 21;
  string currency = 22;
}

message FindSparePartResponse {
  repeated FindSparePartResult SpareParts = 1;
  uint64 found = 2;
}

service SparePartService {
  rpc Get(SparePartRequest) returns(FindSparePartResult){}
  rpc Find(FindSparePartRequest) returns(FindSparePartResponse) {}
  rpc Create(SparePart) returns (SparePartResponse) {}
  rpc Update(SparePart) returns (SparePartResponse) {}
  rpc Delete(SparePartRequest) returns (SparePartResponse) {}
}
